# dodge_master

./: .gitignore  Cargo.toml
.cargo/: config.toml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/melodev/dodgemaster/: MainActivity.java
app/src/main/java/org/bevyengine/dodge_master/: MainActivity.java
crates/dodge_master_android/: Cargo.toml
crates/dodge_master_android/src/: lib.rs
crates/dodge_master_core/: Cargo.toml
crates/dodge_master_core/src/: lib.rs
crates/dodge_master_core/src/base/: arena.rs  character.rs  input.rs  mod.rs  state.rs  utils.rs
crates/dodge_master_core/src/base/attack/: orchestrator.rs
crates/dodge_master_pc/: Cargo.toml
crates/dodge_master_pc/src/: main.rs
gradle/: libs.versions.toml
scripts/: compile.sh  run_and.sh  run_dev.sh  setup.sh
