[workspace]
members = [
    "crates/dodge_master_core",
    "crates/dodge_master_pc",
    "crates/dodge_master_android"
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.19", default-features = false, features = ["android-game-activity", "ui"]}
leafwing-input-manager = { version = "0.21" }
avian2d = "0.7" 

[profile.dev]
opt-level = 0
debug = 1


[profile.dev.package."*"]
opt-level = 1
debug = 0